api/swim_form/src/tests/derive/form/double_header_body_attr.stderr
error: At most one field can replace the tag attribute body.
  --> $DIR/double_header_body_attr.rs:22:16
   |
22 |         #[form(header_body)]
   |                ^^^^^^^^^^^
